refactor: 대회 참가자를 여러 명을 String으로 저장하지 않고 Member와 1:N으로 설정